# Apollo-IO

./: .dockerignore  .env  .gitignore  Dockerfile  LICENSE  Project Overview.docx  README.md  docker-compose.yml  fix_imports.py  pyproject.toml  pytest.ini  requirements.txt  research_cache.json  run_behavior_agent.py  run_company_fit_agent.py  run_pipeline.py  run_research_agent.py  test_graph_state.py  test_lead_score.py  test_qualification.py  test_recommendation.py  update_reqs.py
.github/workflows/: production.yml
ai/graph/: graph.py  state.py
ai/output/: parser.py
ai/prompts/: qualification_prompt.py  recommendation_prompt.py  research_prompt.py  scoring_prompt.py
ai/rule_engine/: company_fit_rules.py  lead_score_rules.py  qualification_rules.py  similarity.py
ai/services/: cache_service.py  llm_service.py
ai/tools/: web_search.py
backend/: alembic.ini  app.py  exceptions.py  main.py  requirements.txt  servicesAction.py
backend/api/: auth_routes.py  company_routes.py  dashboard_routes.py  extension_routes.py  health.py  lead_routes.py  notification_routes.py  report_routes.py  routes.py
backend/config/: __init__.py  environment.py  settings.py  test_config.py  validators.py
backend/core/: exceptions.py  factory.py  health.py  lifespan.py  metrics.py  (+1 more)
docs/: DISASTER_RECOVERY.md  Deployment.md
extension/: manifest.json  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/: index.html  package-lock.json  package.json
scratch/: check_db.py  fix_db.py  reprocess.py
scripts/: migrate_types.py  test_db.py  test_graph.py
(+227 files in other folders)
